Rename Standardworkflow-Anrufung -> Anrufung

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -25,12 +25,12 @@ Grundlegend sieht der Ablauf der zu prüfenden Punkte dabei wie folgt aus:
 \end{enumerate}
 
 \section{Statthaftigkeit}
-\label{Standardworkflow:Statthaftigkeit}
+\label{Anrufung:Statthaftigkeit}
 Die grundlegendsten Anforderungen an eine Anrufung werden unter dem Begriff Statthaftigkeit zusammengefasst.
 Eine Klage ist grundsätzlich nur statthaft, wenn diese Anforderungen erfüllt sind.
 
 \subsection{Antragsteller}
-\label{Standardworkflow:Antragsteller}
+\label{Anrufung:Antragsteller}
 Das allererste dieser Kriterien ist die Benennung eines \index[idx]{Antragsteller|textbf} Antragstelllers bzw. einer Antragstellerin, andernorts auch Kläger  bzw. Klägerin genannt.
 Die SGO kennt alledings den Begriff Kläger bzw. Klägerin nicht sondern nur den Begriff Antragsteller bzw. Antragstellerin, entsprechend wird auch dieser Begriff hier verwendet.
 Antragsteller bzw. Antragstellerin ist typischerweise der oder die Anrufende selbst.
@@ -52,7 +52,7 @@ Der letzte Fall, die Organhandlungsfähigkeitsstreitigkeiten sind strenggenommen
 Aus dem Rahmen fallen natürlich auch immer die Berufungs- und Beschwerdeanrufungen im Instanzenzug und die Widerspruchsanrufung im einstweiligen Rechtsschutz, weil hier die Anrufung typischerweise von der in der ursächlichen Schiedsgerichtsentscheidung unterlegenen Partei ausgeht.
 
 \subsection{Antragsgegner}
-\label{Standardworkflow:Antragsgegner}
+\label{Anrufung:Antragsgegner}
 Der Antragsgegner\index[idx]{Antragsgegner|textbf} oder die Antragsgegnerin ist ebenso notwendig und muss ebenso klar und eindeutig aus der Anrufung entnehmbar sein. Bezüglich der Vertretung gilt hier dasselbe wie bei dem \index[idx]{Antragsteller} Antragsteller bzw. der Antragstellerin.
 
 Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)} handelt es sicht um sogenannte kontradiktorische Verfahren.
@@ -66,7 +66,7 @@ Möglich ist in jedemfall das vorgehen einer Amtsträgerin bzw. eines Amtsträge
 Wichtig ist daher der Grundsatz: Aus dem Antragsteller oder der Antragstellerin ergibt sich zwangsweise ein eingeschränkter Kreis möglicher Antragsgegner und Antragsgegnerinnen.
 
 \subsection{Parteifähigkeit}
-\label{Standardworkflow:Parteifaehigkeit}
+\label{Anrufung:Parteifaehigkeit}
 Gerade wude es schon angesprochen: Antragsteller bzw. Antragstellerin und Antragsgegner bzw. Antragsgegnerin sind die \index[idx]{Streitpartei}Parteien des Prozesses.
 Nach SGO sind Mitglieder und Organe explizit dazu berechtigt, ein Schiedsgericht anzurufen, wenn sie sich in ihren Rechten verletzt fühlen, \S~8 Abs.~1 S.~2 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1}.
 Das bedeutet, dass diese auch zwingend Partei in einem Schiedsgerichtsverfahren sein können.
@@ -84,7 +84,7 @@ Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegan
 Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in Betracht.
 
 \subsection{Anschrift}
-\label{Standardworkflow:Anschrift}
+\label{Anrufung:Anschrift}
 Der Antragsteller muss seine eigene Anschrift sowie die des Antragsgegners angeben.
 Die Anschrift ist notwendig, damit das Schiedsgericht im Verfahren mit den Parteien in Kontakt treten kann.
 Auch wenn die Kommunikation per E-Mail im Verfahren üblich ist, ist es hier notwendig, dass eine postalische Adresse genannt wird.\footnote{Ausführlich dazu \cite[S. 3]{BSG20130715} mwN.}
@@ -101,10 +101,10 @@ Die Postfachanschrift erfüllt ihren Zweck nach \S~8 Abs.~3 Nr.~1, 2 SGO\index[p
 
 Die weiteren Kontaktdaten gemäß \S~8 Abs.~3 Nr.~1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} umfassen Daten wie eine E-Mailadresse. Diese ist aus prozessökonomischen Gründen sinnvoll, da ein Information per E-Mail die Verfahrensparteien schneller erreicht und diese auch schneller reagieren können. Das ganz das Verfahren insgesamt erheblich beschleunigen und macht die direkte Versendung in Kopie zudem einfacher.
 
-Dass die Anschrift unbekannt ist, kann auch nie ein Problem darstellen. Verfahren von Mitglied gegen Mitglied sind schon gar nicht vorgesehen (siehe \ref{Standardworkflow:Antragsgegner}), der Partei ist die Anschrift eines Mitglieds aus der Mitgliederdatenbank bekannt, die Anschrift der Partei und der Gliederungen sind allgemein bekannt, die Organe haben ihre Anschrift für gewöhnlich bei der Gliederung, oder, falls diese abweicht, ist sie vom Organ bekannt gemacht.
+Dass die Anschrift unbekannt ist, kann auch nie ein Problem darstellen. Verfahren von Mitglied gegen Mitglied sind schon gar nicht vorgesehen (siehe \ref{Anrufung:Antragsgegner}), der Partei ist die Anschrift eines Mitglieds aus der Mitgliederdatenbank bekannt, die Anschrift der Partei und der Gliederungen sind allgemein bekannt, die Organe haben ihre Anschrift für gewöhnlich bei der Gliederung, oder, falls diese abweicht, ist sie vom Organ bekannt gemacht.
 
 \subsection{Anträge}
-\label{Standardworkflow:Antraege}
+\label{Anrufung:Antraege}
 Ebenfalls zwingend erforderlich ist es, dass der Antragssteller mit der Anrufung bereits Anträge stellt.
 Diese Anträge müssen nach \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} klar und eindeutig sein.
 Diese innere Dopplung der Formulierung zeigt schon, dass es dem Satzungsgeber darauf ankam, dass der Antragsteller explizit sagen muss, was exakt er mit der Anrufung erreichen will.
@@ -121,7 +121,7 @@ Insofern ist es auch nur eine sehr formale und eingschränkte Prüfung, ob einer
 Und natürlich reicht entgegen der Pluralformulierung von \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} ein einzelner Antrag auch aus. Es ist nicht Sinn und Zwekc der Regelung, dass ein Antragsteller, der nur eine einzelne Sache erreichen will, einen absolut unnötigen zusätzlichen Antrag stellt und das Schiedsgericht so mit Mehrarbeit belastet oder gar schon überhaupt nicht klagen darf, nur weil er nur eine Sache erreichen will.
 
 \subsection{Begründung und Umstände}
-\label{Standardworkflow:Gruende}
+\label{Anrufung:Gruende}
 Die letzte Anforderung des \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} sind eine Darstellung der Umstände und Schilderung einer Begründung der Anträge.
 Damit soll dem Schiedsgericht ein Anhaltspunkt für seine Amtsermittlung des Sachverhaltes nach \S~10 Abs.~1 S.~1 Hs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} gegeben werden und dem Antragsgegner eine Möglichkeit, auf die Klage zu erwiedern.
 Der Sinn und Zweck dieser Anforderung ist also, einen Startpunkt für das Verfahren haben, und den Streit der Parteien einsortieren zu können.
@@ -130,13 +130,13 @@ Solange ein Geschehen geschildert wird und irgendwelche Argumente angeführt wer
 Andernfalls würde \S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} eine Vorwegnahme der eigentlichen Beurteilung des Verfahrens darstellen, dass das Gericht erst nach ausführlicher Beschäftigung mit der Sache selbst durch die Durchführung des Verfahrens tätigen soll.
 
 \section{Weitere Kriterien}
-\label{Standardworkflow:Kriterien}
+\label{Anrufung:Kriterien}
 Neben der Statthaftigkeit gibt es noch weitere Kriterien, die für eine erfolgreiche Anrufung erfüllt sein müssen.
 Dies sind unechte Zulässigkeitskriterien, da sie die Klage unzulässig machen, aber nicht erst im Verfahren mit dem Urteil beschieden werden, sondern schon mit Eröffnung.
 Die Satzung nennt diese Kriterien auch Zulässigkeitskriterien der Eröffnung, vgl. \S~8 Abs.~6 Satz~4 SGO\index[paridx]{SGO!8@\S~8!6@Abs.~6}.
 
 \subsection{Antragsbefugnis}
-\label{Standardworkflow:Antragsbefugnis}
+\label{Anrufung:Antragsbefugnis}
 Die Notwendigkeit der Antragsbefugnis geht aus \S~8 Abs.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} hervor und soll sogenannte Popularklagen verhinden.
 Eine Antragsbefugnis liegt dann vor, wenn der Antragsteller selbst in seinen eigenen Rechten aus der Mitgliedschaft oder seinem sonstigen innerparteilichen Status verletzt ist oder ein Anspruch aus dieser Position nicht erfüllt wird.
 Die Abgrenzung von eigenen Rechten und eigenen Ansprüchen ist nicht immer einfach, aber auch nicht zwingend nötig, da Alternativ eines von beides ausreicht.
@@ -149,14 +149,14 @@ Korrekte Anrufung kann aber nur formelle Kriterien meinen, eine weitergehende, i
 Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach durchgeführtem Verfahren im Endurteil zu bescheiden.
 
 \subsection{Form}
-\label{Standardworkflow:Form}
+\label{Anrufung:Form}
 Die Anforderungen an die Form der Anrufung sind sehr gering.
 Es wird in \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} lediglich die Textform gefordert.
 Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlicher vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte\footcite{LSGBB146}, ist die Textform ausreicht klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
 Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist.
 
 \subsection{Frist}
-\label{Standardworkflow:Frist}
+\label{Anrufung:Frist}
 Die Frist für eine Anrufung soll sicherstellen, dass Streitigkeiten schnell geklärt werden.
 Damit soll verhindert werden, dass auf Basis einer möglicherweise rechtswidrigen Handlung weitere Dinge passieren und eine Klage, die erst nach langer Zeit eingereicht wird, unerwartet alles mitreißen kann.
 Kurz gesagt: Nach einer gewissen Zeit sollen alle möglicherweise Betroffenen auf einen eingetretenen Zustand vertrauen können.
@@ -187,14 +187,14 @@ Eine Fristende an einem Samstag um 24 Uhr wird somit zu einem Fristende am Monta
 Dabei müssen vor allem das Bundesschiedsgericht, aber auch für Landesschiedsgerichte, die verwiesene Verfahren behandeln, im Auge behalten, dass jedes Bundesland eigene Feiertagsgesetze hat.
 
 \subsection{Zuständigkeit}
-\label{Standardworkflow:Zustaendigkeit}
+\label{Anrufung:Zustaendigkeit}
 Über die Zuständigkeit hat das Gericht bereits mit Anrufung zu entscheiden, \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}.
 Dies hat den Hintergrund, dass die SGO anders als die staatliche Gerichtsbarkeit, keine Verweisung vom unzuständigen, angerufenen Gericht an das zuständige Gericht vorsieht.
 Auch sind die Zuständigkeitskriterien der SGO nach \S~6 SGO\index[paridx]{SGO!\S~6} wesentlich einfacher als etwa die der ZPO.
 So ist es bereits aus den Daten der Anrufung ersichtlich, ob ein Gericht zuständig ist.
 
 \subsubsection{Grundlegendes}
-\label{Standardworkflow:Zustaendigkeit:Grundlegendes}
+\label{Anrufung:Zustaendigkeit:Grundlegendes}
 Dabei wird instanziell bei den untersten Gerichten begonnen, \S~6 Abs.~1 SGO\index[paridx]{SGO!6@\S~6!1@Abs.~1}.
 Das sind grundsätzlich die Landesschiedsgerichte.
 Allerdings kann der Satzungsgeber auf Landesebene die Einrichtung von niedrigeren Schiedsgerichten in der Landessatzung für den jeweiligen Landesverband erlauben, \S~2 Abs.~1 Satz~2 SGO\index[paridx]{SGO!2@\S~2!1@Abs.~1}.
@@ -207,7 +207,7 @@ Dabei wird in \S~6 Abs.~2 SGO nochmal klargestellt, was sich aus \S~8 Abs.~5 SGO
 Das wiederrum hängt auch damit zusammen, dass es keine Verweisung zwischen den einzelnen Gerichten gibt und es der anrufenden Streitpartei nicht zugemutet werden soll, dass ein etwaiger Gliederungswechsel oder z.B. eine Verschmelzung von Gliederungen das schon angelaufene Verfahren ungültig macht, weil es im Nachinein unzulässig wurde.
 
 \subsubsection{Zuständigkeit bei Verfahren gegen ein Organ}
-\label{Standardworkflow:Zustaendigkeit:Organ}
+\label{Anrufung:Zustaendigkeit:Organ}
 Organe haben -- juristisch streng genommen -- keine Zugehörigkeit, sondern sind Teil eines Verbandes und handeln für diesen.
 Man könnte zwar eine Zugehörigkeit im allgemeinen Sprachgebrauch konstruieren für den Verband, dessen Teil sie sind.
 Aber auch in diesem Fall leitet sich daraus keine Zugehörigkeit zu den höheren Verbänden ab.
@@ -216,7 +216,7 @@ Diese wäre dann nicht definiert. Das ist eine offensichtliche planwidrige Regel
 Daher bietet sich eine analoge Anwendung der Zuständigkeitsregelungen für Organe nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} an: Das niedrigste Schiedsgericht auf gleicher oder höherer Verbandsebene wie das Organ, das Antragsgegner ist, ist zuständig.
 
 \subsubsection{Zuständigkeit bei Disziplinarverfahren}
-\label{Standardworkflow:Zustaendigkeit:Disziplinarverfahren}
+\label{Anrufung:Zustaendigkeit:Disziplinarverfahren}
 Für die Verfahren mit Disziplinarcharakter, also Verfahren über Einsprüche gegen Ordnungsmaßnahmen und Parteiausschlussverfahren, ist die Zuständigkeit nochmal gesondert in \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4} geregelt.
 Die etwaige Einrichtung von Schiedsgerichten unterhalb der Landesebene soll nichts am Verfahrensablauf ändern und das Verfahren etwa durch eine Instanz mehr im Zweifel in die Länge ziehen und gleichzeitig soll in jedem Fall der für Parteiausschlussverfahren in \S~10 Abs.~5 Satz~2 PartG\index[paridx]{PartG!10@\S~10!5@Abs.~5} vorgeschriebene zweizügige Instanzenzug für alle Mitglieder gleich aussehen. Im selben Zug wird eine nicht notwendige zweite Instanz auch für Einsprüche gegen Ordnungsmaßnahmen garantiert.
 
@@ -238,11 +238,11 @@ Folgt man hingegen der in \cite{BSG20131005} aufgezeigten Rechtssprechungslinie 
 Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in denen man tatsächlich aktuell Mitglied ist,  Disziplinarmaßnahmen gegen das Mitglied unternehmen, ist dann schutzwürdig und der relevante Zeitpunkt für die Entscheidung über die Zuständigkeit dürfte wieder mit der Anrufung beim Schiedsgericht zusammenfallen.\footnote{Vgl.  wie schon oben \cite[S. 9]{BSG115HS}, unter II.1.c.c).}
 
 \section{Bescheidung der Eröffnung}
-\label{Standardworkflow:Beschluss}
+\label{Anrufung:Beschluss}
 Nach der Prüfung aller dargelegten Kriterien ist über die Eröffnung zu bescheiden.
 
 \subsection{Nachbesserung}
-\label{Standardworkflow:Beschluss:Nachbesserung}
+\label{Anrufung:Beschluss:Nachbesserung}
 Sind die Kriterien nicht erfüllt, weil eine odere mehrere notwendige Angaben ganz oder teilweise fehlen, sollte der anrufenden Partei zunächst die Möglichkeit der Nachbesserung gegeben werden.
 Die anrufende Partei sollte dabei möglichst genau auf die fehlenden Angaben hingewiesen werden.
 Allerdings ist besonders auf die Frist zu achten.
@@ -259,7 +259,7 @@ Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb d
 Das Bundesschiedsgericht hat zumindest die Erfordernis einer die Anrufungsfrist verlängernden Nachfristsetzung verneint,\footnote{\cites[S.~2]{BSG2315HS}[S.~2]{BSG20130227}.} und auch ansonsten die verpflichtende Erfordernis einer Nachbesserungsaufforderung  nie angenommen und zumindest dann verneint, wenn eine Fristberechnung dem Schiedsgericht nicht möglich ist und es durch die Nachbesserungsaufforderung, die eine die Anrufungsfrist ersetzende neue Frist setzt, einer ansonsten verfristeten Anrufung zum Erfolg verhelfen könnte.\footnote{\cites{BSG3915HS}[S.~2]{BSG215HS}}.
 
 \subsection{Nichtseröffnungsbeschluss}
-\label{Standardworkflow:Beschluss:Nichteroeffnung}
+\label{Anrufung:Beschluss:Nichteroeffnung}
 Wenn eine Partei nicht erfolgreich nachbessert bleibt keine andere Option als die Anrufung abzuweisen.
 Die Abweisung muss begründet erfolgen, \S~8 Abs.~8 Satz~2 SGO\index[paridx]{SGO!8@\S~8!6@Abs.~6}
 
@@ -268,7 +268,7 @@ Gab es mehrere Gründe, sollten auch alle alternativen Gründe angeführt werden
 Einerseits hilft das dem Rechtsschutzschuchenden, beim nächsten Mal etwas nicht zu übersehen, und zudem hilft das für den Fall, dass eine Nichteröffnungsbeschwerde beim Rechtsmittelgericht eingelegt wird, allen Beteiligten, das Verfahren schnell zu bearbeiten.
 
 \subsection{Eröffnungsbeschluss}
-\label{Standardworkflow:Beschluss:Eroeffnung}
+\label{Anrufung:Beschluss:Eroeffnung}
 Sind alle Kriterien erfüllt und die Anrufung daher korrekt im Sinne des \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}, ist das Verfahren zu eröffnen.
 
 Im Eröffnungsbeschluss sind nach \S~9 SGO\index[paridx]{SGO!9@\S~9} einige Mitteilungen an die Parteien zu machen.
