--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -51,7 +51,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Organisation.tex}
 
-\input{Standardworkflow-Anrufung.tex}
+\input{Anrufung.tex}
 
 \input{Gerichtszusammensetzung.tex}
 
