--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -257,7 +257,7 @@ Eine enge Auslegung wird der Rechtsfolge und somit dem Normcharakter eher gerech
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr4}
 \S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} vermutet unwiderleglich, dass ein Richter unwiderleglich als befangen gilt, wenn eine der Personen nach Nr.~1--3 einem Organ angehören, dass Streitpartei ist.
-Organ ist hier jedes Organ des Bundesverbandes oder einer Parteigliederung, die grundsätzlich immer aktiv- und passivlegitimiert sind.\footnote{Dazu siehe \ref{Standardworkflow:Parteifaehigkeit}.}
+Organ ist hier jedes Organ des Bundesverbandes oder einer Parteigliederung, die grundsätzlich immer aktiv- und passivlegitimiert sind.\footnote{Dazu siehe \ref{Anrufung:Statthaftigkeit:Parteifaehigkeit}.}
 
 Auch diese Vorschrift deutet im Übrigen an, dass der Satzungsgeber bei Nr.~3 keine große, unübersichtliche Personengruppe im Blickfeld hatte und daher die vorgeschlagene enge Auslegung dort geboten ist.
 
