--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -65,6 +65,7 @@ Diese Methoden werden im Folgenden kurz und in ihren Grundzügen dargestellt.
 Diese Methode wird auch als grammatische oder semantische Auslegung bezeichnet. Sie setzt an der Bedeutung der verwendeten Begriffe an und ist damit der Ausgangspunkt einer jeden Auslegung. Dem Wortlaut nach auszulegen bedeutet, zu prüfen, ob ein bestimmter Begriff des Sachverhalts unmittelbar unter einen Begriff der fraglichen Norm zu fassen ist. Die Begriffe müssen daher jeweils ihrer eigenen Bedeutung und dem Kontext ihrer Verwendung nach zueinander passen. Dabei wird es Fälle geben, in denen diese Frage eindeutig mit \enquote{Ja} zu beantworten ist, andere, in denen die Antwort eindeutig \enquote{Nein} lautet. Schließlich wird es Fälle geben, die nicht eindeutig sind. Je näher der Begriff des Sachverhalts dem Begriff der Norm ist und je besser er auch ihren Sinn erfüllt, desto eher spricht das für eine \emph{weite} Auslegung des Norm-Begriffs. Umgekehrt kann auch \emph{eng} ausgelegt werden, d.h. die \enquote{Zweifelsfälle} werden gerade nicht zugelassen.
 
 \subsubsection{Systematische Auslegung}
+\label{Normenauslegung:Auslegung:Methoden:Systematisch}
 Die Systematische Auslegung betrachtet nicht die einzelne Norm, sondern ihre Stellung im Gesamtgefüge des \enquote{Systems} ihres Rechtsgebiets (bspw. einer Satzung). Dabei gelten die folgenden vier Postulate:\footnote{Vgl. umfassend: \cite[S.~66~ff.]{Puppe2008}}
 \begin{enumerate}
 \item \textbf{Das Postulat der Widerspruchsfreiheit:} Das Gesetz widerspricht sich nicht selbst.
