Verweisungseröffnung; Schlichtung; Fix refs/labels

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -335,6 +335,25 @@
 }
 
 
+@RULING{BSG914H1,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 9/14-H 1},
+  date = {2014-04-01},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1193903857}
+}
+@RULING{BSG20131210,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-12-10},
+  date = {2013-12-19},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1925409176}
+}
+
 @RULING{BSG20131204,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
