--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -105,7 +105,7 @@ Daher muss hier das gleiche gelten: Die Regelung ist bezüglich des Widereinstri
 \subsection{Änderung durch Ausschluss eines Richters wegen Besorgnis der Befangenheit}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}
 Das Parteiengesetz fordert in \S~14 Abs.~4\index[paridx]{PartG!14@\S~14!4@Abs.~4} lediglich, dass jede Streitpartei Richter wegen Befangenheit ablehnen kann.
-Auch wenn hier der Wortlaut des Parteiengesetzes andeutet, dass es lediglich bei tatsächlicher Befangenheit ein solches Ablehnungsrecht geben muss, liegt es viel näher, die Anforderung soweit auszulegen, dass die Schiedsgerichtsordnung schon für die Besorgnis der Befangenheit ein Ablehnungsrecht garantieren muss.\footnote{MISSING: Lenski}
+Auch wenn hier der Wortlaut des Parteiengesetzes andeutet, dass es lediglich bei tatsächlicher Befangenheit ein solches Ablehnungsrecht geben muss, liegt es viel näher, die Anforderung soweit auszulegen, dass die Schiedsgerichtsordnung schon für die Besorgnis der Befangenheit ein Ablehnungsrecht garantieren muss.\footnote{\cites[Wißmann][\S~14 Rn~32]{kersten2007parteiengesetz}[Lenski][\S~14 Rn~23]{lenski2011parteiengesetz}}
 Dieser akademische Streit um die Auslegung des \S~14 PartG\index[paridx]{PartG!\S~14} ist jedoch für Verfahren in der Schiedsgerichtsbarkeit der Piratenpartei Deutschland nicht relevant.
 Dies Schiedsgerichtsordnung garantiert in \S~5 Abs.~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} ein Recht auf Ablehnung eines jeden Richters bei Besorgnis seiner Befangenheit.
 
