--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -333,8 +333,6 @@
   gender = {sn},
   url = {http://piraten-bsg.de/#424585601}
 }
-
-
 @RULING{BSG20131204,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
@@ -361,6 +359,15 @@
   date = {2015-09-30},
   gender = {sn},
   url = {https://bsg.piratenpartei.de/2015/09/30/beschluss-zu-pp100127862/}
+}
+@RULING{BSGPP100132493,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {PP\#100132493},
+  date = {2015-11-04},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2015/11/04/beschluss-zu-pp100132493/}
 }
 @RULING{BSG20131005,
   court = {Bundesschiedsgericht},
