--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -69,7 +69,7 @@ Gefahren bestehen bei \emph{obiter dicta} allerdings (auch) darin, dass sie spä
 Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsbarkeit der Piratenpartei häufiger und ausführlicher vorkommen dürfte – und darf – als das bei staatlichen Gerichten der Fall ist, ist bei ihrer Verwendung äußerste Vorsicht geboten.
 
 \subsection{Abweichende Meinungen}
-Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~s~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
+Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
 In der Piratenpartei steht es allen Richterinnen und Richtern zu, gleich welcher Ordnung ihres Schiedsgerichts. Die Bestimmung zu Sondervoten stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.
 
 Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen und sie gesondert kenntlich zu machen, anstatt sie über die Urteilsbegründungen zu verteilen. Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
@@ -87,7 +87,7 @@ Die Rechtsmittelbelehrung soll die Parteien darüber in Kenntnis setzen, welches
 Die Rechtsmittelbelehrung ist nur für Berufungen normiert. Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\index[paridx]{SGO!\S~11!Abs.~4} und die \emph{sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\index[paridx]{SGO!\S~11!Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\index[paridx]{SGO!\S~8!Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\index[paridx]{SGO!\S~10!Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\index[paridx]{SGO!\S~5!Abs.~6}. Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen. Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein. Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind. Insbesondere eine korrekte Belehrung schadet in keinem Falle.
 
 \subsection{Unrichtige oder unterbliebene Rechtsmittelbelehrung}
-Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2}. Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist. Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
+Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2}.\footnote{Anderer Ansicht ist das Bundesschiedsgericht, nach dem eine solche, dem §~58~VwGO entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.} Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist. Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
 
 Wenngleich die Schiedsgerichtsordnung zu einer bloß unrichtigen, d.h. prinzipiell nicht unterbliebenen, aber nicht vollständigen Rechtsmittelbelehrung schweigt, ist anzunehmen, dass dies zur gleichen Rechtsfolge führt: Sinn der \enquote{Fristverlängerung} ist, dass ein Fehler des Gerichts den Parteien nicht schaden soll. Zweck der Rechtsmittelbelehrung ist es, den Parteien den Zugang zu effektivem Rechtsschutz zu ermöglichen, ohne dass sie die Schiedsgerichtsordnung in all ihren Facetten kennen müssen. Da jeder Fehler eines Rechtsmittels dem Rechtsmittel gleichermaßen schadet, besteht kaum ein Unterschied zwischen einer fehlenden und einer unrichtigen Rechtsmittelbelehrung. Im Gegenteil können die Parteien auf den Inhalt der Rechtsmittelbelehrung vertrauen, der Schaden einer unrichtigen Belehrung könnte daher auch als größer angesehen werden als der einer unterbliebenen Belehrung. Auch bei einer fehlerhaften Rechtsmittelbelehrung \enquote{verlängert} sich die Frist also auf 3~Monate.
 
